--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,15 @@
         <h2>URL Shortener</h2>
         <a href="https://github.com/JosiasAurel/deta-url-shortener">GitHub</a>
     </header>
+
+    <form action="#">
+        <input type="url" placeholder="Enter your URL here" id="">
+        <button>Shorten ⚡</button>
+    </form>
+
+    <footer>
+        <p>Built by <a href="https://josiasaurel.tech">Josias Aurel</a> on <a href="https://deta.sh">Deta</a></p>
+    </footer>
     <script src="/static/index.js"></script>
 </body>
 </html>
