--- a/pages/index.html
+++ b/pages/index.html
@@ -18,6 +18,12 @@
         <button>Shorten ⚡</button>
     </form>
 
+    <div id="shorts">
+        <span class="short">
+            <a href="https://jnjs.deta.app/bcdsibc">https://jnjs.deta.app/bcdsibc</a>
+            <a href="https://josiasaurel.tech">https://josiasaurel.tech</a>
+        </span>
+    </div>
     <footer>
         <p>Built by <a href="https://josiasaurel.tech">Josias Aurel</a> on <a href="https://deta.sh">Deta</a></p>
     </footer>
