add js to post and shorten URL

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,8 +13,8 @@
         <a href="https://github.com/JosiasAurel/deta-url-shortener">GitHub</a>
     </header>
 
-    <form action="#">
-        <input type="url" placeholder="Enter your URL here" id="">
+    <form action="#" id="form">
+        <input type="url" placeholder="Enter your URL here" id="inputUrl">
         <button>Shorten ⚡</button>
     </form>
 
