--- a/pages/index.html
+++ b/pages/index.html
@@ -8,10 +8,12 @@
     <title>URL Shortener</title>
 </head>
 <body>
-    <header>
+    <nav>
+        <header>
         <h2>URL Shortener</h2>
         <a href="https://github.com/JosiasAurel/deta-url-shortener">GitHub</a>
     </header>
+    </nav>
 
     <form action="#" id="form">
         <input type="url" placeholder="Enter your URL here" id="inputUrl">
